environments/_commons/greenstar/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tls
spec:
  entryPoints: [ websecure ]
  routes:
    - kind: Rule
      match: Host(`neo4j.${flux_environment}.greenstar.kfirs.com`)
      middlewares:
        - name: ip-whitelist
          namespace: traefik
      priority: 100
      services:
        - name: neo4j
          port: http
          kind: Service
    - kind: Rule
      match: Host(`api.${flux_environment}.greenstar.kfirs.com`)
      middlewares:
        - name: ip-whitelist
          namespace: traefik
      priority: 100
      services:
        - name: api-backend
          port: http
          kind: Service
    - kind: Rule
      match: HostRegexp(`{tenant:[a-zA-Z][a-zA-Z0-9_-]*}.${flux_environment}.greenstar.kfirs.com`)
      middlewares:
        - name: ip-whitelist
          namespace: traefik
      priority: 90
      services:
        - name: frontend
          port: http
          kind: Service
  tls:
    secretName: greenstar-wildcard-tls
